<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Repli</string>
    <string name="action_settings">User Settings</string>
    <string name="action_logout">Logut</string>
    <string name="login_text">Login with Google account</string>
    <string name="signup_text">Sign Up</string>
    <string name="no_account">Dont have an account? Sign up</string>
    <string name="username_text">Username</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="cpassword_text">Confirm Password</string>
    <string name="title_activity_main">Repli</string>
    <string name="thumbnail_description">Image Thumbnail</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_aster">aster</string>
    <string name="waitingText">Waiting for reply…</string>
    <string name="title_activity_view_reply">View Reply</string>

    <string name="hello_world">Hello world!</string>
    <string name="replyButtonText">Reply</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="title_activity_user_info">User Settings</string>

</resources>
