<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="huka.com.repli.SignupActivity">


    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/username_text"
        android:id="@+id/signup_usernameTextView"
        android:textColor="@color/primary"
        android:layout_marginTop="100dp"
        android:ems="11"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:id="@+id/signup_passwordTextView"
        android:textColor="@color/primary"
        android:layout_below="@+id/signup_usernameTextView"
        android:ems="11"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/cpassword_text"
        android:inputType="textPassword"
        android:id="@+id/signup_cpasswordTextView"
        android:textColor="@color/primary"
        android:layout_below="@+id/signup_passwordTextView"
        android:ems="11"/>

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/email_text"
        android:id="@+id/signup_emailTextView"
        android:textColor="@color/primary"
        android:layout_below="@+id/signup_cpasswordTextView"
        android:ems="11"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_text"
        android:id="@+id/signup_signupButton"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/signup_emailTextView"
        android:onClick="signUpListener"/>
</RelativeLayout>
